--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.3"
+  },
+  "engines": {
+    "node": "7.10.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
