--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Mark Ellis <ellismarkf@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "pg": "^6.2.3"
   },
   "engines": {
     "node": "7.10.0"
