--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.3",
+    "helmet": "^3.6.1",
     "pg": "^6.2.3"
   },
   "engines": {
