--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Mark Ellis <ellismarkf@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "helmet": "^3.6.1",
     "pg": "^6.2.3"
